RESOLVED FIXED141616
[Mac] RetainPtr member cleanup, possible leaks
https://bugs.webkit.org/show_bug.cgi?id=141616
Summary [Mac] RetainPtr member cleanup, possible leaks
Joseph Pecoraro
Reported 2015-02-14 19:28:41 PST
* SUMMARY RetainPtr member cleanup, possible leaks. Searching and auditing cases of 'm_.*?=.*?alloc\]' finds some unexpected RetainPtr uses.
Attachments
[PATCH] Proposed Fix (2.51 KB, patch)
2015-02-14 19:30 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-02-14 19:30:13 PST
Created attachment 246611 [details] [PATCH] Proposed Fix
Andreas Kling
Comment 2 2015-02-14 21:09:43 PST
Comment on attachment 246611 [details] [PATCH] Proposed Fix Nice! r=me
WebKit Commit Bot
Comment 3 2015-02-14 21:14:41 PST
Comment on attachment 246611 [details] [PATCH] Proposed Fix Clearing flags on attachment: 246611 Committed r180121: <http://trac.webkit.org/changeset/180121>
WebKit Commit Bot
Comment 4 2015-02-14 21:14:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.