[Mac] RetainPtr member cleanup, possible leaks https://bugs.webkit.org/show_bug.cgi?id=141616

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-02-14
Reviewed by Andreas Kling.

* platform/mac/PlatformSpeechSynthesizerMac.mm:
(-[WebSpeechSynthesisWrapper speakUtterance:]):
Adopt the allocated object to avoid a possible leak.

* platform/mac/ScrollAnimatorMac.mm:
(WebCore::ScrollAnimatorMac::ScrollAnimatorMac):
Adopt to avoid unnecessary retain/autorelease.

Canonical link: https://commits.webkit.org/159642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180121 268f45cc-cd09-0410-ab3c-d52691b4dbfc